--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Varun's Portfolio</h1>
-    <h2>Full Stack Developer</h2>
+    <h2>Wasssuppp Fammm</h2>
     <hr />
 
     <h3><a href="./index copy.html">Favourite Anime List (Top 3)</a></h3>
@@ -23,4 +23,9 @@
         <li><a href="./public/about.html">About me</a></li>
         <li><a href="./index1.html.html">Contact Me</a></li>
     </ul>
+    <footer>
+        <small> 
+            © Varun official.All rights reserved.
+        </small>
+    </footer>
 </body>
